fix style norder

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,7 +28,7 @@ a {
 h1 {
   font-family: "Inconsolata", Consolas, monospace;
   font-size: 4em;
-  color: #fff;
+  color: gray;
 }
 .typing {
   position: relative;
@@ -40,7 +40,7 @@ h1 {
   right: 0;
   width: 100%;
   color: white;
-  background: #1d1f20;
+  background: #e0e0e0;
   animation: typing 4s steps(16) forwards, caret 1s infinite;
 }
 
