--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,8 +27,9 @@ a {
 
 h1 {
   font-family: "Inconsolata", Consolas, monospace;
-  font-size: 4em;
+  font-size: 3em;
   color: gray;
+  margin-top: 70px;
 }
 .typing {
   position: relative;
@@ -57,4 +58,8 @@ h1 {
 .css-1jbbcbn-MuiDataGrid-columnHeaderTitle{
   font-weight: bold !important;
   font-size: 17px;
+}
+
+.iEvsvB{
+  margin: 0 15px !important;
 }
