--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@ h1 {
   font-family: "Inconsolata", Consolas, monospace;
   font-size: 3em;
   color: gray;
-  margin-top: 70px;
+  margin: 0;
 }
 .typing {
   position: relative;
@@ -62,4 +62,30 @@ h1 {
 
 .iEvsvB{
   margin: 0 15px !important;
+}
+
+h2 {
+  position: absolute;
+  color: #fff;
+  font-size: 28px;
+  transform: translate(-50%,-50%);
+  animation: morph-effect 10s infinite ease-in-out;
+  padding-left: 150px;
+
+}
+.admin:nth-child(1){
+  animation-delay: -10s;
+}
+.admin:nth-child(2){
+  animation-delay: -5s;
+}
+@keyframes morph-effect {
+  0%, 20%, 100% {
+    filter: blur(0px);
+    opacity: 1;
+  }
+  40%, 80% {
+    filter: blur(16px);
+    opacity: 0;
+  }
 }
